--- a/practiced-config.json
+++ b/practiced-config.json
@@ -1,5 +1,5 @@
 {
-  "content-generator": "linux/generate-content.py",
+  "content-generator": "generate-content.py",
   "time-minutes-between-harassments": 1,
   "shut-up-after-how-many-minutes": false,
   "option-to-tell-it-to-shut-up": false
