Read some more stuff from the config file

--- a/practiced-config.json
+++ b/practiced-config.json
@@ -1,6 +1,7 @@
 {
   "popup-title": "Practice Time!",
   "content-generator": "generate-content.py",
+  "harassment-script": "linux-harass.sh",
   "time-minutes-between-harassments": 1,
   "shut-up-after-how-many-minutes": false,
   "option-to-tell-it-to-shut-up": false
