--- a/practiced-macos-config.json
+++ b/practiced-macos-config.json
@@ -1,5 +1,6 @@
 {
   "harassment-script": "macos-harass.sh",
+  "notification-script": "macos-notify.sh",
   "prompt-generator": "generate-prompt.py",
   "popup-title": "Practice Time!",
   "time-seconds-between-harassments": 300
