--- a/practiced-linux-config.json
+++ b/practiced-linux-config.json
@@ -1,7 +1,7 @@
 {
-  "harassment-script": "linux-harass.sh",
-  "notification-script": "linux-notify.sh",
-  "prompt-generator": "georgian/generate-prompt.py",
+  "harassment-script": "linux-scripts/linux-harass.sh",
+  "notification-script": "linux-scripts/linux-notify.sh",
+  "prompt-generator": "prompt-generators/georgian/generate-prompt.py",
   "popup-title": "Practice Time!",
   "time-seconds-between-harassments": 300
 }
